--- a/project/styles/bms.css
+++ b/project/styles/bms.css
@@ -73,7 +73,16 @@ body {
 
 }
 
-
+.last-visited {
+  max-width: 500px;
+  border: 2px solid var(--hover-color);
+  text-align: center;
+  border-radius: 5rem;
+  padding: 1rem 0 1rem 0;
+  background-color: var(--hover-bg-color);
+  margin: 0 auto;
+  font-style: italic;
+}
 .welcome-img {
     width: 100%;
     height: auto;
@@ -228,6 +237,11 @@ hr {
     width: 100%;
     height: auto;
   }
+  .about-motto {
+    text-align: center;
+    padding-bottom: 1rem;
+    font-style: italic;
+  }
 
   /*Added styles for the conatact page*/
   .contact-img {
@@ -237,6 +251,9 @@ hr {
 
   .contact-msg {
     text-align: center;
+  }
+  .contact-motto {
+    font-style: italic;
   }
   .contact-msg-two {
     border: 2px solid var(--main-text-color);
@@ -414,4 +431,30 @@ hr {
     background-color: var(--hover-bg-color);
     color: var(--hover-color);
     border-color: var(--hover-color);
+  }
+
+  @keyframes lastVisited-animation {
+    0% {
+      transform: translateX(-700px);
+    }
+    20% {
+      background-color: var(--hover-color);
+    }
+    40% {
+      background-color: var(--main-text-color);
+      color: var(--hover-color);
+    }
+    60% {
+      background-color: var(--main-text-color);
+      color: var(--hover-color);
+    }
+    80% {
+      background-color: var(--hover-color);
+    }
+    100% {
+      transform: translateX(700px);
+    }
+  }
+  .last-visited {
+    animation: lastVisited-animation 20s 2s infinite alternate linear;
   }
